# GIMME-python

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: python-package.yml
GIMMEpython/: gimmeSEM.py  main.py
GIMMEpython.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_gimmeSEM.py  test_something.py
